{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 17,
  "lineage": "2fab5162-db9c-bc97-4707-04154d2e07d1",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/us-con-gcp-sbx-dep0019-081424/global/networks/terraform-network",
            "name": "terraform-network",
            "network_id": 3978675371852854330,
            "numeric_id": "3978675371852854330",
            "self_link": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/networks/terraform-network",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/regions/us-east1/subnetworks/terraform-subnet"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/us-con-gcp-sbx-dep0019-081424/regions/us-east1/subnetworks/terraform-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "terraform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/networks/terraform-network",
            "private_ip_google_access": false,
            "project": "us-con-gcp-sbx-dep0019-081424",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/regions/us-east1/subnetworks/terraform-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3623918039640208394
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-01-18T00:32:18.209-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/us-con-gcp-sbx-dep0019-081424/global/firewalls/allow-egress",
            "log_config": [],
            "name": "allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/networks/terraform-network",
            "params": [],
            "priority": 1000,
            "project": "us-con-gcp-sbx-dep0019-081424",
            "self_link": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/firewalls/allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "iap-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-18T00:41:59.889-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/us-con-gcp-sbx-dep0019-081424/global/firewalls/allow-http-iap",
            "log_config": [],
            "name": "allow-http-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/networks/terraform-network",
            "params": [],
            "priority": 1000,
            "project": "us-con-gcp-sbx-dep0019-081424",
            "self_link": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/firewalls/allow-http-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "iap-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-18T00:14:50.047-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/us-con-gcp-sbx-dep0019-081424/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/networks/terraform-network",
            "params": [],
            "priority": 1000,
            "project": "us-con-gcp-sbx-dep0019-081424",
            "self_link": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "iap-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260114",
                    "labels": {
                      "my_label": "value"
                    },
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/zones/us-east1-b/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-01-18T00:34:41.415-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/us-con-gcp-sbx-dep0019-081424/zones/us-east1-b/instances/terraform-instance",
            "instance_id": "8643097811941926350",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "kZBmOvwKYhQ=",
            "metadata_startup_script": "#!/bin/bash\n\n# Update package list\napt-get update\n\n# Install nginx\napt-get install -y nginx\n\n# Start nginx service\nsystemctl start nginx\nsystemctl enable nginx\n\n# Create a custom index page\necho \"\u003ch1\u003eHello from Terraform GCP Instance!\u003c/h1\u003e\" \u003e /var/www/html/index.html\necho \"\u003cp\u003eNginx is running successfully.\u003c/p\u003e\" \u003e\u003e /var/www/html/index.html\n\n# Display nginx status\nsystemctl status ng [...]
            "name": "terraform-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/global/networks/terraform-network",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/regions/us-east1/subnetworks/terraform-subnet",
                "subnetwork_project": "us-con-gcp-sbx-dep0019-081424"
              }
            ],
            "project": "us-con-gcp-sbx-dep0019-081424",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/us-con-gcp-sbx-dep0019-081424/zones/us-east1-b/instances/terraform-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "iap-ssh"
            ],
            "tags_fingerprint": "5o-_APsX5KU=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_network.vpc_network",
            "data.google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}